# cube-analyzer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: EXPERIMENTS.md  article_llm_intuition.md  article_llm_intuition_draft.md  article_per_reflect.md
source/: ablation_baselines.py  cfop.py  cube_template.html  cube_tools.py  data.py  infer.py  llm_agent.py  playground.py  train.py
source/cube/: __init__.py  state.py  vis_util.py
source/model/: solver.py
tests/: conftest.py  oracle.py  test_cfop.py  test_cube_tools.py  test_model.py  test_state.py  test_value_iter.py  test_vis_util.py
