[project]
name = "cube-analyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
